tests/ui/send-future-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/send-future-endpoint-alias.rs:40:22
   |
36 |     let flow = endpoint
   |                -------- first mutable borrow occurs here
...
40 |     let flow_again = endpoint
   |                      ^^^^^^^^ second mutable borrow occurs here
...
44 |     core::hint::black_box(send);
   |                           ---- first borrow later used here
